--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
   <link rel="stylesheet" href="middle.css">
   <script src="script.js"></script>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+    
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200px;
+      background-color: #464646;
+      padding: 20px;
+      box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
+      box-sizing: border-box;
+      height: 100vh; /* Set the height to 100vh for full-screen height */
+      display: flex;
+      flex-direction: column;
+    }
+
+    .content {
+      flex: 1;
+      padding: 20px;
+      margin-left: 200px; /* Adjust the margin to match the width of the sidebar */
+    }
+
     .challenges-button,
     .levels-button {
       background-color: #ffffff;
       color: rgb(0, 0, 0);
       padding: 10px 20px;
-      border: none;
+      border: 8px double #000000;
       border-radius: 4px;
       font-size: 16px;
       cursor: pointer;
@@ -17,6 +43,10 @@
       font-family: Arial, sans-serif; /* Change the font family as needed */
       text-decoration: none; /* Remove underline */
       transition: background-color 0.3s ease, transform 0.3s ease; /* Add transition for smooth color and transform change */
+      font-weight: bold; /* Add font-weight: bold; for bold text */
+      display: block;
+      margin-bottom: 20px;
+      box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0.274);
     }
 
     .challenges-button:hover,
@@ -32,9 +62,14 @@
   </style>
 </head>
 <body>
-  <div class="middle" id="levelList">
+  <div class="sidebar">
     <a href="index.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
+  </div>
+  <div class="content">
+    <div class="middle" id="levelList">
+      <!-- Your existing content goes here -->
+    </div>
   </div>
 </body>
 </html>
