--- a/challenges.html
+++ b/challenges.html
@@ -9,7 +9,7 @@
       padding: 0;
       display: flex;
     }
-
+    
     .sidebar {
       position: fixed;
       top: 0;
@@ -17,6 +17,7 @@
       width: 200px;
       background-color: #464646;
       padding: 20px;
+      box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
       box-sizing: border-box;
       height: 100vh; /* Set the height to 100vh for full-screen height */
       display: flex;
@@ -30,6 +31,7 @@
     }
 
     .challenges-button,
+    .info-button,
     .levels-button {
       background-color: #ffffff;
       color: rgb(0, 0, 0);
@@ -49,12 +51,15 @@
     }
 
     .challenges-button:hover,
+    .info-button:hover,
     .levels-button:hover {
+      border: 8px double #636363;
       background-color: #f2f2f2; /* Change to the desired hover background color */
       transform: scale(1.05); /* Increase scale on hover (adjust as needed) */
     }
 
     .challenges-button:focus,
+    .info-button:focus,
     .levels-button:focus {
       outline: none;
     }
@@ -62,7 +67,8 @@
 </head>
 <body>
   <div class="sidebar">
-    <a href="index.html" class="levels-button">Levels</a>
+    <a href="index.html" class="info-button">Info</a>
+    <a href="levels.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
   </div>
   <div class="content">
