--- a/challenges.html
+++ b/challenges.html
@@ -8,26 +8,29 @@
       margin: 0;
       padding: 0;
       display: flex;
+      flex-direction: column; /* Change the flex-direction to column */
     }
-    
+
     .sidebar {
       position: fixed;
       top: 0;
       left: 0;
-      width: 200px;
+      width: 100%; /* Full width of the screen */
       background-color: #464646;
       padding: 20px;
       box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
       box-sizing: border-box;
-      height: 100vh; /* Set the height to 100vh for full-screen height */
       display: flex;
-      flex-direction: column;
+      justify-content: space-between; /* Align content horizontally */
+      z-index: 2; /* Set a higher z-index to make it appear on top */
+      margin-bottom: 20px; /* Add a margin to the bottom to separate it from the content */
     }
 
     .content {
       flex: 1;
       padding: 20px;
-      margin-left: 200px; /* Adjust the margin to match the width of the sidebar */
+      position: relative; /* Add relative positioning to allow the content to be behind the sidebar */
+      z-index: 1; /* Set a lower z-index to ensure content is behind the sidebar */
     }
 
     .challenges-button,
@@ -72,7 +75,7 @@
     <a href="challenges.html" class="challenges-button">Challenges</a>
   </div>
   <div class="content">
-    <div class="middle2" id="challengeList">
+    <div class="middle" id="challengeList">
       <!-- Your existing content goes here -->
     </div>
   </div>
