--- a/challenges.html
+++ b/challenges.html
@@ -16,14 +16,14 @@
       top: 0;
       left: 0;
       width: 100%; /* Full width of the screen */
-      background-color: #464646;
-      padding: 20px;
+      background-color: #222222;
+      padding: 15px;
       box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
       box-sizing: border-box;
-      display: flex;
-      justify-content: space-between; /* Align content horizontally */
+      display: inline-flex;
+      justify-content: center; /* Align content horizontally */
       z-index: 2; /* Set a higher z-index to make it appear on top */
-      margin-bottom: 20px; /* Add a margin to the bottom to separate it from the content */
+      margin-bottom: 00px; /* Add a margin to the bottom to separate it from the content */
     }
 
     .content {
@@ -49,9 +49,12 @@
       transition: background-color 0.3s ease, transform 0.3s ease; /* Add transition for smooth color and transform change */
       font-weight: bold; /* Add font-weight: bold; for bold text */
       display: block;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
+      margin-left: 20px;
+      margin-right: 20px;
       box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0.274);
     }
+
 
     .challenges-button:hover,
     .info-button:hover,
