--- a/challenges.html
+++ b/challenges.html
@@ -16,15 +16,24 @@
       top: 0;
       left: 0;
       width: 100%; /* Full width of the screen */
-      background-color: #222222;
+      background: linear-gradient(to top, #0c0c0c, #181818);
       padding: 15px;
-      box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
+      box-shadow: 0px 0px 12px 12px rgba(0, 0, 0, 0.5);
       box-sizing: border-box;
       display: inline-flex;
       justify-content: center; /* Align content horizontally */
       z-index: 2; /* Set a higher z-index to make it appear on top */
       margin-bottom: 00px; /* Add a margin to the bottom to separate it from the content */
     }
+
+    .text-box {
+  background: #1d1d1d;
+  color: #161616;
+  padding: 0px;
+  width: 100%;
+  margin: 00px; /* Add margin to all sides */
+  text-align: center; /* Align the text to the right */
+}
 
     .content {
       flex: 1;
@@ -34,12 +43,11 @@
     }
 
     .challenges-button,
-    .info-button,
     .levels-button {
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
+      background-color: #141414;
+      color: rgb(221, 221, 221);
       padding: 10px 20px;
-      border: 8px double #000000;
+      border: 2px solid #c7c7c7;
       border-radius: 4px;
       font-size: 16px;
       cursor: pointer;
@@ -52,20 +60,18 @@
       margin-bottom: 0px;
       margin-left: 20px;
       margin-right: 20px;
-      box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0.274);
+      box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0);
     }
 
-
     .challenges-button:hover,
-    .info-button:hover,
     .levels-button:hover {
-      border: 8px double #636363;
+      border: 2px solid #636363;
       background-color: #f2f2f2; /* Change to the desired hover background color */
       transform: scale(1.05); /* Increase scale on hover (adjust as needed) */
+      color: rgb(5, 5, 5);
     }
 
     .challenges-button:focus,
-    .info-button:focus,
     .levels-button:focus {
       outline: none;
     }
@@ -73,7 +79,6 @@
 </head>
 <body>
   <div class="sidebar">
-    <a href="index.html" class="info-button">Info</a>
     <a href="levels.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
   </div>
@@ -81,6 +86,9 @@
     <div class="middle" id="challengeList">
       <!-- Your existing content goes here -->
     </div>
+  </div>
+  <div class="text-box">
+    <p>©Mariner 2023</p>
   </div>
 </body>
 </html>
