--- a/index.html
+++ b/index.html
@@ -3,84 +3,32 @@
 <head>
   <link rel="stylesheet" href="middle3.css">
   <style>
-body {
+    body {
       margin: 0;
       padding: 0;
       display: flex;
-      flex-direction: column; /* Change the flex-direction to column */
-    }
-
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%; /* Full width of the screen */
-      background-color: #222222;
-      padding: 15px;
-      box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.397);
-      box-sizing: border-box;
-      display: inline-flex;
-      justify-content: center; /* Align content horizontally */
-      z-index: 2; /* Set a higher z-index to make it appear on top */
-      margin-bottom: 00px; /* Add a margin to the bottom to separate it from the content */
+      flex-direction: column;
     }
 
     .content {
       flex: 1;
       padding: 20px;
-      position: relative; /* Add relative positioning to allow the content to be behind the sidebar */
-      z-index: 1; /* Set a lower z-index to ensure content is behind the sidebar */
-    }
-
-    .challenges-button,
-    .info-button,
-    .levels-button {
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
-      padding: 10px 20px;
-      border: 8px double #000000;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      text-align: center;
-      font-family: Arial, sans-serif; /* Change the font family as needed */
-      text-decoration: none; /* Remove underline */
-      transition: background-color 0.3s ease, transform 0.3s ease; /* Add transition for smooth color and transform change */
-      font-weight: bold; /* Add font-weight: bold; for bold text */
-      display: block;
-      margin-bottom: 0px;
-      margin-left: 20px;
-      margin-right: 20px;
-      box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0.274);
-    }
-
-    .challenges-button:hover,
-    .info-button:hover,
-    .levels-button:hover {
-      border: 8px double #636363;
-      background-color: #f2f2f2; /* Change to the desired hover background color */
-      transform: scale(1.05); /* Increase scale on hover (adjust as needed) */
-    }
-
-    .challenges-button:focus,
-    .info-button:focus,
-    .levels-button:focus {
-      outline: none;
     }
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <a href="index.html" class="info-button">Info</a>
-    <a href="levels.html" class="levels-button">Levels</a>
-    <a href="challenges.html" class="challenges-button">Challenges</a>
-  </div>
   <div class="container">
-  <div class="content">
-    <div class="middle3" id="infoList">
-      <!-- Your existing content goes here -->
-    </div>
+    <div class="content">
+      <div class="middle3" id="infoList">
+        <!-- Your existing content goes here -->
+      </div>
     </div>
   </div>
+
+  <script>
+    setTimeout(function() {
+      window.location.href = 'levels.html';
+    }, 3000); // 3000 milliseconds (3 seconds)
+  </script>
 </body>
 </html>
