--- a/challenges.html
+++ b/challenges.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="middle2.css">
+  <link rel="stylesheet" href="widget.css">
   <script src="script2.js"></script>
   <style>
     body {
@@ -28,7 +29,7 @@
 
     .text-box {
   background: #1d1d1d;
-  color: #161616;
+  color: #0e0e0e;
   padding: 0px;
   width: 100%;
   margin: 00px; /* Add margin to all sides */
@@ -78,6 +79,10 @@
   </style>
 </head>
 <body>
+  <!-- Widget Container -->
+  <div class="widget-container">
+    <iframe src="https://discord.com/widget?id=901414769691623464&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  </div>
   <div class="sidebar">
     <a href="levels.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
