--- a/challenges.html
+++ b/challenges.html
@@ -23,7 +23,7 @@
       box-sizing: border-box;
       display: inline-flex;
       justify-content: center; /* Align content horizontally */
-      z-index: 2; /* Set a higher z-index to make it appear on top */
+      z-index: 4; /* Set a higher z-index to make it appear on top */
       margin-bottom: 00px; /* Add a margin to the bottom to separate it from the content */
     }
 
@@ -31,6 +31,7 @@
   background: #1d1d1d;
   color: #0e0e0e;
   padding: 0px;
+  z-index: 3;
   width: 100%;
   margin: 00px; /* Add margin to all sides */
   text-align: center; /* Align the text to the right */
@@ -65,6 +66,7 @@
     }
 
     .challenges-button:hover,
+    .info-button:hover,
     .levels-button:hover {
       border: 2px solid #636363;
       background-color: #f2f2f2; /* Change to the desired hover background color */
@@ -73,6 +75,7 @@
     }
 
     .challenges-button:focus,
+    .info-button:focus,
     .levels-button:focus {
       outline: none;
     }
@@ -83,9 +86,24 @@
   <div class="widget-container">
     <iframe src="https://discord.com/widget?id=901414769691623464&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
+  <div class="popup-container" id="popup">
+    <div class="popup-content">
+      <h2 class="popup-title">Level Details</h2>
+      <p class="popup-info"><a id="popup-video" target="_blank">Watch on YouTube</a></p>
+      <p class="popup-info"><span id="popup-name"></span></p>
+      <p class="popup-info">ID: <span id="popup-id"></span></p>
+      <p class="popup-info">Creator: <span id="popup-author"></span></p>
+      <p class="popup-info">Beaten: <span id="popup-beaten"></span></p>
+      <button class="popup-close" id="popup-close">Close</button>
+    </div>
+  </div>
   <div class="sidebar">
     <a href="levels.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
+  </div>
+  <div class="list-thumbnail">
+    <img class="youtube-icon" src="https://i.imgur.com/GzvNHp3.png" alt="YouTube Icon">
+    <!-- rest of your thumbnail content -->
   </div>
   <div class="content">
     <div class="middle" id="challengeList">
