--- a/levels.html
+++ b/levels.html
@@ -86,9 +86,24 @@
   <div class="widget-container">
     <iframe src="https://discord.com/widget?id=901414769691623464&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
+  <div class="popup-container" id="popup">
+    <div class="popup-content">
+      <h2 class="popup-title">Level Details</h2>
+      <p class="popup-info"><a id="popup-video" target="_blank">Watch on YouTube</a></p>
+      <p class="popup-info"><span id="popup-name"></span></p>
+      <p class="popup-info">ID: <span id="popup-id"></span></p>
+      <p class="popup-info">Creator: <span id="popup-author"></span></p>
+      <p class="popup-info">Beaten: <span id="popup-beaten"></span></p>
+      <button class="popup-close" id="popup-close">Close</button>
+    </div>
+  </div>
   <div class="sidebar">
     <a href="levels.html" class="levels-button">Levels</a>
     <a href="challenges.html" class="challenges-button">Challenges</a>
+  </div>
+  <div class="list-thumbnail">
+    <img class="youtube-icon" src="https://i.imgur.com/GzvNHp3.png" alt="YouTube Icon">
+    <!-- rest of your thumbnail content -->
   </div>
   <div class="content">
     <div class="middle" id="levelList">
