Mobile support maybe

--- a/levels.html
+++ b/levels.html
@@ -54,11 +54,11 @@
         <p class="popup-info">ID: <span id="popup-id"></span></p>
         <p class="popup-info">Creator: <span id="popup-author"></span></p>
         <p class="popup-info">Beaten: <span id="popup-beaten"></span></p>
+        <button class="popup-close" id="popup-close">X</button>
       </div>
       <div class="popup-video-container">
         <iframe id="popup-video-frame" width="100%" height="450" frameborder="0" allowfullscreen></iframe>
       </div>
-      <button class="popup-close" id="popup-close">Close</button>
     </div>
   </div>
   <div class="sidebar">
