--- a/ladder.html
+++ b/ladder.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="middle.css">
   <link rel="stylesheet" href="widget.css">
-  <script src="script.js"></script>
+  <script src="scriptladder.js"></script>
   <style>
     body {
       margin: 0;
@@ -28,14 +28,14 @@
     }
 
     .text-box {
-      background: #000000;
-      color: #121212;
-      padding: 0px;
-      z-index: 3;
-      width: 100%;
-      margin: 00px; /* Add margin to all sides */
-      text-align: center; /* Align the text to the right */
-    }
+  background: #000000;
+  color: #121212;
+  padding: 0px;
+  z-index: 3;
+  width: 100%;
+  margin: 00px; /* Add margin to all sides */
+  text-align: center; /* Align the text to the right */
+}
 
     .content {
       flex: 1;
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div class="sidebar">
-    <button onclick="window.location.href='ladder.html'">Go to Ladder</button>
+    <button onclick="window.location.href='levels.html'">Go to List</button>
   </div>
   <div class="content">
     <div class="middle" id="levelList">
