--- a/ladder.html
+++ b/ladder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="middle.css">
+  <link rel="stylesheet" href="laddermiddle.css">
   <link rel="stylesheet" href="widget.css">
   <script src="scriptladder.js"></script>
   <style>
@@ -65,7 +65,7 @@
     <button onclick="window.location.href='levels.html'">Go to List</button>
   </div>
   <div class="content">
-    <div class="middle" id="levelList">
+    <div class="laddermiddle" id="levelList">
       <!-- Your existing content goes here -->
     </div>
     <div class="discord-widget">
