--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!-- Added lang attribute -->
 <head>
+  <meta charset="UTF-8"> <!-- Added charset meta tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
+  <title>Loading...</title> <!-- Set title to "Loading..." -->
   <link rel="stylesheet" href="middle3.css">
   <style>
     body {
@@ -17,18 +20,10 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="content">
-      <div class="middle3" id="infoList">
-        <!-- Your existing content goes here -->
-      </div>
-    </div>
-  </div>
-
   <script>
     setTimeout(function() {
       window.location.href = 'levels.html';
-    }, 3000); // 3000 milliseconds (3 seconds)
+    }, 100); // 3000 milliseconds (3 seconds)
   </script>
 </body>
 </html>
